# telegram-filter-notifai

./: .gitignore  README.md  docker-compose.yml  dockerfile  dockerfile.broadcast  dockerfile.listen  makefile  pyproject.toml
telegram_filter_notifai/: broadcast.py  database.py  listen.py  main.py  monkeypatch.py  telegram.py
